[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Actor/Trainer.gd" type="Script" id=1]
[ext_resource path="res://Assets/NPC/bug_catcher.png" type="Texture" id=2]
[ext_resource path="res://Scenes/DialogZone.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 10 )

[node name="Trainer" type="KinematicBody2D"]
script = ExtResource( 1 )
trainer_sprite = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.89078 )
texture = ExtResource( 2 )
hframes = 4

[node name="CollisonShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.0459669, -1.28358 )
shape = SubResource( 1 )

[node name="ChangeDirectionDelay" type="Timer" parent="."]

[node name="DialogZone" parent="." instance=ExtResource( 3 )]
[connection signal="timeout" from="ChangeDirectionDelay" to="." method="_on_ChangeDirectionDelay_timeout"]
